--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,10 @@
     />
 
     <!-- Using Google Font -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap"
       rel="stylesheet"
     />
 
@@ -55,18 +56,10 @@
     />
 
     <title>KDIT TICKET SYSTEM</title>
-    <meta
-      name="description"
-      content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style"
-    />
-    <meta
-      name="keywords"
-      content="react,material,kit,application,dashboard,admin,template"
-    />
-    <meta name="author" content="Minimal UI Kit" />
+    <meta name="author" content="KDIT SOLUTION" />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>KDIT TICKET SYSTEM</noscript>
     <div id="root"></div>
   </body>
 </html>
